<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_independant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ind_pendant" />

            <CheckBox
                android:id="@+id/cb_strategy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/strat_gie" />

            <CheckBox
                android:id="@+id/cb_management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Management" />

            <CheckBox
                android:id="@+id/cb_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/action" />

            <CheckBox
                android:id="@+id/cb_rpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/rpg" />


            <CheckBox
                android:id="@+id/cb_shooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/fps" />

            <CheckBox
                android:id="@+id/cb_adventure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/aventure" />


            <CheckBox
                android:id="@+id/cb_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/course" />

            <CheckBox
                android:id="@+id/cb_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="@string/sport" />



            <CheckBox
                android:id="@+id/cb_fighting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Combat" />

            <CheckBox
                android:id="@+id/cb_puzzle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Puzzle" />

            <CheckBox
                android:id="@+id/cb_arcade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Arcade" />

            <CheckBox
                android:id="@+id/cb_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Jeu de cartes" />

            <CheckBox
                android:id="@+id/cb_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Jeu de famille" />

            <CheckBox
                android:id="@+id/cb_boardGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Jeu de société" />

            <CheckBox
                android:id="@+id/cb_casual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Casual" />

            <CheckBox
                android:id="@+id/cb_platformer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Plateformer" />

            <CheckBox
                android:id="@+id/cb_educational"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Education" />

            <CheckBox
                android:id="@+id/cb_mmo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Multijoueurs en ligne" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="370dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Joyeux" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Triste" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Poétique" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Mélancholique" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"

                android:text="Défoulant" />

            <CheckBox
                android:id="@+id/checkBox17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Comique" />

            <CheckBox
                android:id="@+id/checkBox18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Cérébral" />

            <CheckBox
                android:id="@+id/checkBox19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Dynamique" />

            <CheckBox
                android:id="@+id/checkBox20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Sportif" />

            <CheckBox
                android:id="@+id/checkBox21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClicked"
                android:text="Effrayant" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/id_findGameBtn"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="9dp"
        android:text="Quel est mon jeu ?"
        android:textSize="8sp"
        android:onClick="goToGameView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="Catégories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_humeurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="177dp"
        android:text="Humeurs"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView1" />


</androidx.constraintlayout.widget.ConstraintLayout>